--- a/style.css
+++ b/style.css
@@ -825,6 +825,11 @@ h4 {
     background-image: url("img/image-de-presentation.bmp");
 }
 
+.photo-commentaire{
+    display: block;
+    max-width: 100%;
+    height: auto; }
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
@@ -886,6 +891,12 @@ h4 {
         padding: 0 20px;
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
+    }
+
+    .row-no-gutters {
+        display: flex;
+        flex-direction: row;
+        justify-content:space-around;
     }
 }
 
@@ -1032,6 +1043,11 @@ h4 {
     .bloc {
         padding-left: 0;
         padding-right: 0;
+    }
+    .row-no-gutters {
+        display: flex;
+        flex-direction: row;
+        justify-content:space-around;
     }
 }
 
