--- a/style.css
+++ b/style.css
@@ -888,9 +888,12 @@ h4 {
     }
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        
+        padding:0 20px;
+    
+    padding-right:(safe-area-inset-right,);
+   
+    padding-left:(safe-area-inset-left,);
     }
 
     .row-no-gutters {
